[gd_scene load_steps=8 format=3 uid="uid://6y5wir75g0s8"]

[ext_resource type="Script" path="res://scripts/menu.gd" id="1_f06ne"]
[ext_resource type="PackedScene" uid="uid://xq0a6xvieh3q" path="res://scenes/background.tscn" id="1_q1lhq"]
[ext_resource type="FontFile" uid="uid://ctarhy48yiein" path="res://fonts/LazyFox Pixel Font 4.ttf" id="2_8fhw6"]
[ext_resource type="Texture2D" uid="uid://cr6oqcnahs41e" path="res://assets/button UI.png" id="4_8obti"]

[sub_resource type="AtlasTexture" id="AtlasTexture_yqum0"]
atlas = ExtResource("4_8obti")
region = Rect2(112, 160, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_0m1g4"]
atlas = ExtResource("4_8obti")
region = Rect2(96, 160, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_44kh6"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_yqum0")
}],
"loop": false,
"name": &"sound_disabled",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_0m1g4")
}],
"loop": false,
"name": &"sound_enabled",
"speed": 5.0
}]

[node name="Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_f06ne")

[node name="background" parent="." instance=ExtResource("1_q1lhq")]
layout_mode = 1
offset_right = -6.10352e-05

[node name="BoxContainerTitle" type="BoxContainer" parent="."]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_top = 65.0
offset_bottom = 195.0
grow_horizontal = 2
vertical = true

[node name="SubTitle" type="Label" parent="BoxContainerTitle"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_fonts/font = ExtResource("2_8fhw6")
theme_override_font_sizes/font_size = 100
text = "NEOWISE"
horizontal_alignment = 1
vertical_alignment = 1

[node name="BoxContainerSubTitle" type="BoxContainer" parent="."]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_top = 130.0
offset_bottom = 224.0
grow_horizontal = 2
vertical = true

[node name="SubTitle" type="Label" parent="BoxContainerSubTitle"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_fonts/font = ExtResource("2_8fhw6")
theme_override_font_sizes/font_size = 50
text = "gravity defying
"
horizontal_alignment = 1
vertical_alignment = 1

[node name="BoxContainerCenter" type="BoxContainer" parent="."]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -50.5
offset_bottom = 188.5
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="VBoxContainerActions" type="VBoxContainer" parent="BoxContainerCenter"]
layout_mode = 2

[node name="NewGame" type="Button" parent="BoxContainerCenter/VBoxContainerActions"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
focus_mode = 0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_pressed_color = Color(0.0871841, 0.304444, 1.44392e-07, 1)
theme_override_colors/font_hover_color = Color(0.219608, 0.639216, 0, 1)
theme_override_fonts/font = ExtResource("2_8fhw6")
theme_override_font_sizes/font_size = 35
text = "New Game"
flat = true

[node name="BestScore" type="Button" parent="BoxContainerCenter/VBoxContainerActions"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
focus_mode = 0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_pressed_color = Color(0.0871841, 0.304444, 1.44392e-07, 1)
theme_override_colors/font_hover_color = Color(0.219608, 0.639216, 0, 1)
theme_override_fonts/font = ExtResource("2_8fhw6")
theme_override_font_sizes/font_size = 35
text = "Best Score"
flat = true

[node name="Credits" type="Button" parent="BoxContainerCenter/VBoxContainerActions"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
focus_mode = 0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_pressed_color = Color(0.0871841, 0.304444, 1.44392e-07, 1)
theme_override_colors/font_hover_color = Color(0.219608, 0.639216, 0, 1)
theme_override_fonts/font = ExtResource("2_8fhw6")
theme_override_font_sizes/font_size = 35
text = "Credits"
flat = true

[node name="Exit" type="Button" parent="BoxContainerCenter/VBoxContainerActions"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
focus_mode = 0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_pressed_color = Color(0.0871841, 0.304444, 1.44392e-07, 1)
theme_override_colors/font_hover_color = Color(0.219608, 0.639216, 0, 1)
theme_override_fonts/font = ExtResource("2_8fhw6")
theme_override_font_sizes/font_size = 35
text = "Exit"
flat = true

[node name="VBoxContainerGameOver" type="VBoxContainer" parent="BoxContainerCenter"]
layout_mode = 2

[node name="GameOverLabel" type="Label" parent="BoxContainerCenter/VBoxContainerGameOver"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_8fhw6")
theme_override_font_sizes/font_size = 70
text = "Game Over
"
horizontal_alignment = 1

[node name="GameOverScoreLabel" type="Label" parent="BoxContainerCenter/VBoxContainerGameOver"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_8fhw6")
theme_override_font_sizes/font_size = 30
text = "score: 0"
horizontal_alignment = 1

[node name="BackToMenuGameOver" type="Button" parent="BoxContainerCenter/VBoxContainerGameOver"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
focus_mode = 0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_pressed_color = Color(0.0871841, 0.304444, 1.44392e-07, 1)
theme_override_colors/font_hover_color = Color(0.219608, 0.639216, 0, 1)
theme_override_fonts/font = ExtResource("2_8fhw6")
theme_override_font_sizes/font_size = 30
text = "
Back to menu"
flat = true

[node name="RichTextLabelCredits" type="RichTextLabel" parent="."]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = 10.0
offset_top = -333.5
offset_right = -10.0
offset_bottom = 333.5
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
theme_override_fonts/normal_font = ExtResource("2_8fhw6")
theme_override_fonts/bold_font = ExtResource("2_8fhw6")
theme_override_fonts/italics_font = ExtResource("2_8fhw6")
theme_override_fonts/bold_italics_font = ExtResource("2_8fhw6")
theme_override_fonts/mono_font = ExtResource("2_8fhw6")
theme_override_font_sizes/normal_font_size = 20
theme_override_font_sizes/bold_font_size = 25
theme_override_font_sizes/italics_font_size = 20
theme_override_font_sizes/bold_italics_font_size = 25
theme_override_font_sizes/mono_font_size = 20
bbcode_enabled = true
text = "




[center]
[b]Credits:[/b]

[b]Pixel Planet Generator:[/b]
Created by [url=https://deep-fold.itch.io]Deep Fold[/url]

[b]Character sprite:[/b]
Created by [url=https://dizabanik.itch.io]Dizabanik[/url]

[b]Music:[/b]
Created by [url=https://thegoldocelot.itch.io]OGoldOcelot[/url]

[b]Texts font:[/b]
Created by [url=https://lazy-fox.itch.io]Lazy Fox[/url]

[b]Icon UI:[/b]
Created by [url=https://kicked-in-teeth.itch.io]Kicked In Teeth[/url]

We sincerely thank the talented artists who have made these resources freely available to the game development community. Your contributions were essential to the creation of this project.
[/center]
"

[node name="BackToMenuCredits" type="Button" parent="RichTextLabelCredits"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -28.0
offset_right = 4.0
offset_bottom = 72.0
grow_horizontal = 0
focus_mode = 0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_pressed_color = Color(0.0871841, 0.304444, 1.44392e-07, 1)
theme_override_colors/font_hover_color = Color(0.219608, 0.639216, 0, 1)
theme_override_fonts/font = ExtResource("2_8fhw6")
theme_override_font_sizes/font_size = 50
text = "X"
flat = true
alignment = 2

[node name="BoxContainerBottom" type="BoxContainer" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -96.5
offset_top = -44.0
offset_right = 96.5
offset_bottom = -22.0
grow_horizontal = 2
grow_vertical = 0
alignment = 1

[node name="MadeBy" type="Label" parent="BoxContainerBottom"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_8fhw6")
theme_override_font_sizes/font_size = 25
text = "Made by "

[node name="Author2" type="LinkButton" parent="BoxContainerBottom"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_pressed_color = Color(0.0871841, 0.304444, 1.44392e-07, 1)
theme_override_colors/font_hover_color = Color(0.219608, 0.639216, 0, 1)
theme_override_fonts/font = ExtResource("2_8fhw6")
theme_override_font_sizes/font_size = 25
text = "DevStulk"
underline = 1
uri = "https://devstulk.itch.io/"

[node name="BestScoreLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 1
theme_override_fonts/font = ExtResource("2_8fhw6")
theme_override_font_sizes/font_size = 50
text = "Best score: 0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="BackToMenuBestScore" type="Button" parent="BestScoreLabel"]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -30.0
offset_bottom = 30.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 0
focus_mode = 0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_pressed_color = Color(0.0871841, 0.304444, 1.44392e-07, 1)
theme_override_colors/font_hover_color = Color(0.219608, 0.639216, 0, 1)
theme_override_fonts/font = ExtResource("2_8fhw6")
theme_override_font_sizes/font_size = 30
text = "



Back to menu"
flat = true

[node name="SoundButton" type="Button" parent="."]
layout_mode = 1
offset_left = 1.0
offset_top = 13.0
offset_right = 37.0
offset_bottom = 44.0
focus_mode = 0
flat = true

[node name="AnimatedSprite2DSound" type="AnimatedSprite2D" parent="SoundButton"]
position = Vector2(18, 18)
scale = Vector2(2, 2)
sprite_frames = SubResource("SpriteFrames_44kh6")
animation = &"sound_disabled"
autoplay = "sound_enabled"

[connection signal="pressed" from="BoxContainerCenter/VBoxContainerActions/NewGame" to="." method="_on_new_game_pressed"]
[connection signal="pressed" from="BoxContainerCenter/VBoxContainerActions/BestScore" to="." method="_on_best_score_pressed"]
[connection signal="pressed" from="BoxContainerCenter/VBoxContainerActions/Credits" to="." method="_on_credits_pressed"]
[connection signal="pressed" from="BoxContainerCenter/VBoxContainerActions/Exit" to="." method="_on_exit_pressed"]
[connection signal="pressed" from="BoxContainerCenter/VBoxContainerGameOver/BackToMenuGameOver" to="." method="_on_back_to_menu_game_over_pressed"]
[connection signal="meta_clicked" from="RichTextLabelCredits" to="." method="_on_rich_text_label_credits_meta_clicked"]
[connection signal="pressed" from="RichTextLabelCredits/BackToMenuCredits" to="." method="_on_back_to_menu_credits_pressed"]
[connection signal="pressed" from="BestScoreLabel/BackToMenuBestScore" to="." method="_on_back_to_menu_best_score_pressed"]
[connection signal="pressed" from="SoundButton" to="." method="_on_sound_button_pressed"]
[connection signal="toggled" from="SoundButton" to="." method="_on_sound_button_toggled"]
